# mlsec-deadlines

./: LICENSE  README.md  index.html  index.js
data-loading/: README.md  main.py  pyproject.toml
data-loading/src/: model.py
data-loading/src/sources/: __init__.py  base.py  ccfddl.py  guofeigu.py  own.py
docs/: index.js
docs/data/: conferences.json
web/: index.html  index.js
web/data/: conferences.json
