[project]
name = "data-loading"
version = "0.1.0"
description = "Loads and normalizes conference data from various sources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "daterangeparser>=1.3.2",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
